[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Kenney Rocket.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Game Background.jpg" type="Texture" id=3]
[ext_resource path="res://About_Popup.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="GUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 450.0
margin_right = -406.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -452, -2.38419e-07 )
scale = Vector2( 0.593171, 0.592593 )
texture = ExtResource( 3 )
centered = false

[node name="Start" type="Button" parent="."]
margin_top = 247.0
margin_right = 168.0
margin_bottom = 273.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = SubResource( 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_top = 277.0
margin_right = 168.0
margin_bottom = 303.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Instructions")
custom_fonts/font = SubResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="."]
margin_top = 307.0
margin_right = 168.0
margin_bottom = 333.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../About")
custom_fonts/font = SubResource( 3 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions_Popup" type="WindowDialog" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
window_title = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Instructions_Popup"]
margin_right = 1024.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 6 )
text = "Controls: 
A - Hero moves left and enemy moves right .
D - Hero moves right and enemy moves left.
W - Both hero and enemy move up.
S -Both hero and enemy move down.
Press (Esc) to pause the game.
Objective  :  The basic objective is to make the hero kill the enemy within the given number of moves.
Sword  :  If you pick up the sword and collide with the enemy ,you win ,if it's the other way around , you lose.
PS  :   IF YOU COLLIDE WITH THE ENEMY WITHOUT PICKING THE SWORD, YOU LOSE!!
Spikes  :   If the hero falls on the spikes , you lose ; if you make the enemy fall on the spike , you win.
Pushers  :   Pushers push your hero or enemy in the direction of the arrow."

[node name="About" type="Button" parent="."]
margin_top = 337.0
margin_right = 168.0
margin_bottom = 363.0
focus_neighbour_top = NodePath("../Instructions")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = SubResource( 4 )
text = "About Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About_Popup" parent="." instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 640.0

[node name="Credits" type="Button" parent="."]
margin_top = 367.0
margin_right = 168.0
margin_bottom = 393.0
focus_neighbour_top = NodePath("../About")
focus_neighbour_bottom = NodePath("../Start")
custom_fonts/font = SubResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits_Popup" type="WindowDialog" parent="."]
margin_right = 1024.0
margin_bottom = 640.0

[node name="RichTextLabel" type="RichTextLabel" parent="Credits_Popup"]
margin_right = 1040.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 8 )
text = "													FONTS, ASSETS							    KENNEY.NL
						           				MUSIC/SOUNDS							  D$P(132101001)
												  SARATH & LOKESH						GAME DEVS

Special thanks to all the Game Dev members of the YACC, for teaching us how to use Godot and helping us at every stage of developing the game. 											"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
